#// Original Copyright © 2021 lemonxah
#// Modified Copyright © 2022 stringhandler
#// Licensed under the Apache License, Version 2.0 (the "License");
#// you may not use this file except in compliance with the License.
#// You may obtain a copy of the License at
#//
#// http://www.apache.org/licenses/LICENSE-2.0
#//
#// Unless required by applicable law or agreed to in writing, software
#// distributed under the License is distributed on an "AS IS" BASIS,
#// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#// See the License for the specific language governing permissions and
#// limitations under the License.
[package]
name = "d3ne"d
version = "0.7.6"
authors = ["lemonxah <lemon.xah@gmail.com>", "stringhandler <stringhandler@gmail.com>"]
edition = "2021"
description = "Rust D3 Node Engine implementation that works with retejs, still a work in progress"
license = "Apache-2.0"
homepage = "https://github.com/lemonxah/d3ne-rs"
documentation = "https://docs.rs/d3ne/"
repository = "https://github.com/lemonxah/d3ne-rs"

[dependencies]
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
anyhow = "1.0.54"
thiserror = "1.0.0"
